Catching up with some work.

--- a/site/content/projects/motorcycles.html
+++ b/site/content/projects/motorcycles.html
@@ -6,10 +6,10 @@ thumbnail: motorcycle.jpg
 track: True
 ---
 
-{{ macros.render_figure('<a href="http://www.flickr.com/photos/samjacoby/10402047085/" title="IMG_6380 by s_jacoby, on Flickr"><img src="http://farm4.staticflickr.com/3721/10402047085_335e05019f.jpg" width="500" height="375" alt="IMG_6380"></a>', "Matching colors (October 2013)") }}
+{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/10402047085/in/set-72157636792385405/player/" width="800" height="600" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Matching colors (October 2013)") }}
 
 {% mark excerpt %}
-Obeying a widely-known primordial need within the soul, I was compelled to acquire a 1972 Honda motorcycle. It's a 41 year-old machine and requires continuous attention. That is part of the fun. This is mostly a place for me to keep track of notes. 
+Obeying a widely-known primordial need within the soul, I was compelled to acquire a 1972 Honda motorcycle in the summer of 2013. It's a 41 year-old machine and requires continuous attention. That is part of the fun. This is mostly a place for me to keep track of notes. 
 {% endmark %}
 
 I've found great satisfaction in working on it: tracing down corroded electrical connections, adjusting the timing,  changing the tires. I lean back, hands dabbed with oil and inhale the petroleum's intoxicating bouquet... Why, I just might write [a book](http://en.wikipedia.org/wiki/Zen_and_the_Art_of_Motorcycle_Maintenance) about it.{{ macros.render_footnote("zen-1", "†") }} 
@@ -81,9 +81,40 @@ I've started tackling the clutch in earnest. They're notorious in CB500s and Hon
 
 I started by breaking into the parts bike, just to get a sense of how the pieces fit together -- which has been useful. It's a bit nerve-wracking to begin wrenching without having any idea what's in there (though I have the manuel), so it's nice to have something to play with. Tackling the clutch has been a chore. The old gasket is just about fused to the crankcase, and it's taking a couple of soaks with various solvents and a razorblade to clean it off. Nice and shiny now, though. 
 
-I picked up some synthetic Mobile grease, kind've for no reason other than it was the most expensive, and I figured why-the-hell-not. Turned out to be red, which I don't like.  
+I checked out the clutch plates from both machines -- neither were so amazing. I checked the steel plates for warping against a glass plate and a feeler gauge. They mostly seemed OK, actually, though according to many reports, that's unlikely. The friction plates showed a bit more wear, but they also weren't warped and basically good enough to use. More concerning was that their cork pattern was clearly not stock, nor was it any of the other well-known cork facings (square, etc.) I deglazed (I hope), the steel plates with some fine sandpaper. I also measured the springs, which looked basically fine.     
 
-The lifter assembly and bearing went in pretty smoothly. I found a new pushrod on Ebay -- technically belongs to a CB450, but it seems to fit in there pretty nicely (same 8mm diameter), and it's i good shape. Getting an OEM clutch cable was a good idea too. A clutch cable was one of the first things that I bought when I got the bike -- but now, the better part of a year later, I know that it's some non-OEM junk that's not even close to the right length. 
+{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/13806512005/player/" width="600" height="800" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Clutch basket laid bare.") }}
+
+{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/13806618593/player/" width="800" height="600" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Mystery friction plates.")}}
+
+{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/13806883674/player/" width="600" height="800" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Measuring over here.")}}
+
+{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/13806544755/player/" width="800" height="600" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "In theory, these are fine.")}}
+
+I picked up some synthetic Mobile grease for no reason other than it was the most expensive, and I figured why-the-hell-not. Turned out to be red, which I don't like.  
+
+The lifter assembly and bearing went in pretty smoothly. I found a new pushrod on Ebay -- technically belongs to a CB450, but it seems to fit in there pretty nicely (same 8mm diameter), and it's i good shape. Getting an OEM clutch cable was a good idea too. A clutch cable was one of the first things that I bought when I got the bike. Now, the better part of a year later, I know that it's some non-OEM junk that's not even close to the right length.
+
+{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/15414325736/player/" width="800" height="600" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Beneath the clutch basket.") }}
+
+{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/15250835787/player/" width="800" height="600" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Replacement lifter (from a CB450)") }}
+
+{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/15434191861/player/" width="800" height="600" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Left to right: crap, old OEM, and new OEM") }}
+
+The whole thing came back together well enough, and though I wouldn't exactly call my clutch smooth-shifting (the plates probably do need to be replaced), but it's working well enough for now. 
+
+{# 
+## Replacing Fork Seals
+I wanted to get this done before I took the ride out to Iowa City. I've had a very slight leak on my front fork seals--not much, but enough to show an issue. Of greater concern are persistent handling issues I've had since I picked up the bike in the summer of 2013. I noticed it early on -- on one of the very first rides I took, in fact -- a pronounced wobble when deaccellerating from the 40s or so. It turns out that this is a fairly common issue, and not one nece  
+
+## Oil Pump Seals
+
+## Oil Switch
+I've been trying to track down an oil leak in my left crankcase -- it's never been an enormous amount of oil, not enough to stop me riding, but a pain nonetheless. I've done the little tricks with the baby powder, and I thought it was the oilpan seal for awhile.  
+
+I've been having a long-standing leak 
+
+#}
 
 ## Work Log
 I decided I should be keeping a dated worklog -- it's just a useful thing to do. I've been doing it by hand, but what else is the internet for? 
@@ -91,7 +122,7 @@ I decided I should be keeping a dated worklog -- it's just a useful thing to do.
 Date | Item | Work
 ---|---|---
 July 2013 | Oil | Changed
-July 2013 | Oil filter | Changed
+July 2013 | Oil filter | Replaced
 July 2013 | Clutch | Clutch cover opened, cleaned, clutch adjusted
 August 2013 | Petcock | Fuel filter screen checked
 August 2013 | Fuel lines | Gas line replaced (with 5.5mm original) 
@@ -107,8 +138,13 @@ April 2014 | Oil | Changed, Castrol 10W-40
 April 2014  | Seals | Replaced right-crank gasket
 April 2014 | Clutch | Checked clutch plates for warping, wear
 April 2014 | Clutch | Replaced clutch cable & lifter rod.
-April 2014 | Ignition | Rebuilt and refinished key assembly  
+April 2014 | Ignition | Rebuilt key assembly  
 June 2014 | Fork | Replaced fork seals & changed fork oil 
+August 2014 | Oil | Changed  
+August 2014 | Oil Filter | Replaced  
+August 2014 | Oil Pump |  Replace oil pump seals
+September 2014 | Oil Switch | Replaced leaking oil pressure switch 
+September 2014 | Front Caliper | Replace piston seal 
 
 
 ## Resources
@@ -118,8 +154,3 @@ June 2014 | Fork | Replaced fork seals & changed fork oil
 - [New England Honda Guys](http://nehondaguys.info/)
 
 {{ macros.render_footnote("zen-1", "†", "Never read it. Hear it's not really about motorcycles.") }}
-
-
-
-
-
