--- a/site/content/projects/squares.html
+++ b/site/content/projects/squares.html
@@ -9,5 +9,6 @@ track: True
 ---
 [![Squares.js](/media/img/squares.png)](/squares/)
 
-On my ongoing journey of self-improvement, I made a little thing. In a relative first for me, I did it without including all of the fancy libraries. It also uses Firebase, which is a pretty neat, simple thing. Check it out [here](/squares/).  
+On my ongoing journey of self-improvement, I made a little thing. In a relative first for me, I did it without including all of the fancy libraries. It also uses Firebase, which is a pretty neat, simple thing. Check it out [here](/squares/). 
 
+**This will probably work until [firebase](http://firebase.com) decides it shouldn't.**
