Adding Nica Times clips & assorted bric-a-brac.

--- a/site/content/projects/motorcycles.html
+++ b/site/content/projects/motorcycles.html
@@ -145,6 +145,8 @@ August 2014 | Oil Filter | Replaced
 August 2014 | Oil Pump |  Replace oil pump seals
 September 2014 | Oil Switch | Replaced leaking oil pressure switch 
 September 2014 | Front Caliper | Replace piston seal 
+January 2014 | Motor | Removed. Whew! 
+February 2014 | Motor | Replaced head gasket  
 
 
 ## Resources
