--- a/site/content/me/index.html
+++ b/site/content/me/index.html
@@ -12,7 +12,9 @@ I graduated from Harvard in 2009, where I studied computer science and history.
 
 You can find me on [github][0], [flickr][2], & [twitter][1].  
 
-Here's my [resume]({{ media_url('files/resume.pdf')}}), and a site where I very infrequently [sell my books][3].
+Here's my [resume]({{ media_url('files/resume.pdf')}}), and a site where I very infrequently [sell my books][3]. 
+
+My email address is sam@shackmanpress.com. 
 
 [0]: https://github.com/samjacoby/
 [1]: https://twitter.com/samjacoby 
