--- a/site/content/printing/wallau-broadside.html
+++ b/site/content/printing/wallau-broadside.html
@@ -5,8 +5,8 @@ summary: "A type specimen printed from Klingspor originals."
 weight: 15
 thumbnail: wallau-1.jpg
 ---
+I printed this broadside in Mainz, Germany, at the _Druckladen des Gutenberg Museums_, while I was a _praktikant_ there. It's Rudolf Koch's Wallau, a _rundgotisch_ typeface, with elements of classic German blackletter and traditional roman capitals. Dan Reynolds has a whole lot more information [here](http://www.typeoff.de/2005/06/17/die-wallau-schriftprobe/). 
 
-This broadside was printed in Mainz, Germany, at the _Druckladen des Gutenberg Museums_. It's Rudolf Koch's Wallau, a _rundgotisch_ typeface, with elements of classic German blackletter and traditional roman capitals. Dan Reynolds has a whole lot more information [here](http://www.typeoff.de/2005/06/17/die-wallau-schriftprobe/).
 <div class="gallery">
     <img src="{{ media_url('img/scaled_wallau-1.jpg') }}"/>
     <img src="{{ media_url('img/scaled_wallau-2.jpg') }}"/>
