Adding my PGP key.

--- a/site/content/me/index.html
+++ b/site/content/me/index.html
@@ -2,7 +2,7 @@
 title: Hello. 
 title_ending: " | Me"
 ---
-I'm a printer, programmer, and swampologist in Somerville, Massachussetts. 
+I'm a printer, programmer, and swampologist (temporarily) in Iowa City, Iowa. 
 
 I work at [Formlabs](http://formlabs.com). 
 
@@ -14,9 +14,10 @@ You can find me on [github][0], [flickr][2], & [twitter][1].
 
 Here's my [resume]({{ media_url('files/resume.pdf')}}), and a site where I very infrequently [sell my books][3]. 
 
-My email address is sam@shackmanpress.com. 
+My email address is sam@shackmanpress.com. My PGP fingerprint is 6158 7468 4027 7C94 0083  E78B CB8F 3E72 9477 5FF1. My full public key is [here][4].
 
 [0]: https://github.com/samjacoby/
 [1]: https://twitter.com/samjacoby 
 [2]: http://www.flickr.com/photos/samjacoby/ 
 [3]: http://shackmanpress.com
+[4]: /media/files/SamJacoby.asc 
