--- a/site/content/projects/motorcycles/index.html
+++ b/site/content/projects/motorcycles/index.html
@@ -5,15 +5,13 @@ date: 2013-10-21 23:30:01
 thumbnail: motorcycle.jpg 
 track: True
 ---
-
 {{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/10402047085/in/set-72157636792385405/player/" width="800" height="600" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Matching colors (October 2013)") }}
 
 {% mark excerpt %}
-Obeying a widely-known primordial need within the soul, I was compelled to acquire a 1972 Honda motorcycle in the summer of 2013. It's a 41 year-old machine and requires continuous attention. That is part of the fun. This is mostly a place for me to keep track of notes. 
+Obeying a widely-known primordial need within the soul, I was compelled to acquire a 1972 Honda motorcycle in the summer of 2013.[^soul] It's a 41 year-old machine and requires continuous attention. That is part of the fun. This is mostly a place for me to keep track of notes. 
 {% endmark %}
 
-I've found great satisfaction in working on it: tracing down corroded electrical connections, adjusting the timing,  changing the tires. I lean back, hands dabbed with oil and inhale the petroleum's intoxicating bouquet... Why, I just might write [a book](http://en.wikipedia.org/wiki/Zen_and_the_Art_of_Motorcycle_Maintenance) about it.{{ macros.render_footnote("zen-1", "†") }} 
-
+I've found great satisfaction in working on it: tracing down corroded electrical connections, adjusting the timing,  changing the tires. I lean back, hands dabbed with oil and inhale the petroleum's intoxicating bouquet... Why, I just might write [a book](http://en.wikipedia.org/wiki/Zen_and_the_Art_of_Motorcycle_Maintenance) about it.[^zen-1]
 
 ## Maintenance Table
 I've been working my way down this, little by little. It's pretty handy. 
@@ -105,7 +103,7 @@ The whole thing came back together well enough, and though I wouldn't exactly ca
 
 {# 
 ## Replacing Fork Seals
-I wanted to get this done before I took the ride out to Iowa City. I've had a very slight leak on my front fork seals--not much, but enough to show an issue. Of greater concern are persistent handling issues I've had since I picked up the bike in the summer of 2013. I noticed it early on -- on one of the very first rides I took, in fact -- a pronounced wobble when deaccellerating from the 40s or so. It turns out that this is a fairly common issue, and not one nece  
+I wanted to get this done before I took the ride out to Iowa City. I've had a very slight leak on my front fork seals--not much, but enough to show an issue. Of greater concern are persistent handling issues I've had since I picked up the bike in the summer of 2013. I noticed it early on -- on one of the very first rides I took, in fact -- a pronounced wobble when deaccellerating from the 40s or so. It turns out that this is a fairly common issue, usually resolved by replacing the original head bearings with a tapered set. New fork oil could only help, though I think I've got deeper-seated issues there than just that.  
 
 ## Oil Pump Seals
 
@@ -146,7 +144,10 @@ August 2014 | Oil Pump |  Replace oil pump seals
 September 2014 | Oil Switch | Replaced leaking oil pressure switch 
 September 2014 | Front Caliper | Replace piston seal 
 January 2014 | Motor | Removed. Whew! 
-February 2014 | Motor | Replaced head gasket  
+February 2014 | Motor | Disassembled Head 
+April 2014 | Motor | Removed cylinder studs (ouch) 
+April 2014 | Tank | Sealed w/ Eastman 2K Clearcoat 
+May 2014 | Motor | Valves reground, new seats cut (MAS Machine, Iowa City 
 
 
 ## Resources
@@ -155,4 +156,5 @@ February 2014 | Motor | Replaced head gasket
 - [Honda CB500 Manuals](http://www.sohc4.net/cb500-manuals/ ) (Courtesy of SOHC4)
 - [New England Honda Guys](http://nehondaguys.info/)
 
-{{ macros.render_footnote("zen-1", "†", "Never read it. Hear it's not really about motorcycles.") }}
+[zen-1]: Never read it. Hear it's not really about motorcycles. Update 05/27/2015. Read it. Is kind've about motorcycles.
+[^soul]: See *Easy Rider*. 
