--- a/site/content/projects/squares.html
+++ b/site/content/projects/squares.html
@@ -1,6 +1,6 @@
 ---
 title: Squares
-summary: Drawing some squares.  
+summary: Drawing some squares in JavaScript & firebase.io.  
 date: 2015-01-09 17:00:54
 thumbnail: squares.png 
 tags:
