Adding explanation about site.

--- a/site/content/me/index.html
+++ b/site/content/me/index.html
@@ -16,6 +16,8 @@ Here's my [resume]({{ media_url('files/resume.pdf')}}), and a site where I very 
 
 My email address is sam@shackmanpress.com. My PGP fingerprint is 6158 7468 4027 7C94 0083  E78B CB8F 3E72 9477 5FF1. My full public key is [here][4].
 
+If you'd like to learn a bit more about how this site was made, take a look [here](/posts/2012/8/21/hello-world/). 
+
 [0]: https://github.com/samjacoby/
 [1]: https://twitter.com/samjacoby 
 [2]: http://www.flickr.com/photos/samjacoby/ 
