Moved motorcycles page to new location (and lost change history).

--- a/site/content/projects/motorcycles/index.html
+++ b/site/content/projects/motorcycles/index.html
@@ -156,5 +156,5 @@ May 2014 | Motor | Valves reground, new seats cut (MAS Machine, Iowa City
 - [Honda CB500 Manuals](http://www.sohc4.net/cb500-manuals/ ) (Courtesy of SOHC4)
 - [New England Honda Guys](http://nehondaguys.info/)
 
-[zen-1]: Never read it. Hear it's not really about motorcycles. Update 05/27/2015. Read it. Is kind've about motorcycles.
+[^zen-1]: Never read it. Hear it's not really about motorcycles. Update 05/27/2015. Read it. Is kind've about motorcycles.
 [^soul]: See *Easy Rider*. 
