--- a/site/content/projects/motorcycles/index.html
+++ b/site/content/projects/motorcycles/index.html
@@ -1,105 +1,33 @@
 ---
 title: Motorcycles 
 summary: In which I discover what everyone else already knew 
-date: 2013-10-21 23:30:01
+date: 2014-10-21 23:30:01
 thumbnail: motorcycle.jpg 
 track: True
 ---
-{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/10402047085/in/set-72157636792385405/player/" width="800" height="600" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Matching colors (October 2013)") }}
+![](/media/img/fall-cb500.jpg)
+:  Fall ride outside of Boston.  
 
 {% mark excerpt %}
-Obeying a widely-known primordial need within the soul, I was compelled to acquire a 1972 Honda motorcycle in the summer of 2013.[^soul] It's a 41 year-old machine and requires continuous attention. That is part of the fun. This is mostly a place for me to keep track of notes. 
+Obeying a widely-known primordial need within the soul, I was compelled to acquire a 1972 Honda motorcycle in the summer of 2013. It's a 41 year-old machine and requires continuous attention. That is part of the fun. This is mostly a place for me to keep track of notes. 
 {% endmark %}
 
 I've found great satisfaction in working on it: tracing down corroded electrical connections, adjusting the timing,  changing the tires. I lean back, hands dabbed with oil and inhale the petroleum's intoxicating bouquet... Why, I just might write [a book](http://en.wikipedia.org/wiki/Zen_and_the_Art_of_Motorcycle_Maintenance) about it.[^zen-1]
+
+## Projects
+
+- [Right-Hand Switch Rebuild](right-hand-switch)
+- [Starter Solenoid Rebuild](starter-solenoid)
+- [Clutch Cleanup ](clutch)
 
 ## Maintenance Table
 I've been working my way down this, little by little. It's pretty handy. 
 
 {{ macros.render_figure('<a href="http://www.flickr.com/photos/samjacoby/10817763986/" title="HSM500550_9 by s_jacoby, on Flickr"><img src="http://farm8.staticflickr.com/7405/10817763986_cd48417a9f.jpg" width="368" height="500" alt="HSM500550_9"></a>', "From when charts were king.") }}
 
-
-## Right-Hand Switch Rebuild
-For awhile I've had terrible problems with the electrics (particular the starter), so I decided to restore that whole pathway, from the right-hand switch (home to the ignition button) on down to the starter solenoid (which feeds the starter motor) on to the starter itself.   
-
-{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449722364/in/set-72157636792385405/player/" width="500" height="375" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "My shattered starter button. A pretty common problem on these bikes, apparently.")}}
-
-There are some great write-ups in the SOHC4 forums on how to rebuild the bars where the switch lives--so I'll leave most of it to the experts. The toughest part of the whole job was simply removing the switch in the first place. Some of the screws were pretty badly rusted and stripped (my fault), so I had to work some magic with a screw extractor. Those things have saved me twice now.
-
-{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12450255044/in/set-72157636792385405/player/" width="480" height="640" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Harbor Freight's finest at work and play. This was really hard.")}}
-
-Removing the screw. A real pain, as I didn't have a vise or anything to hold the bars steady, so they were wiggling all over the place. Kind've had to brace it and get at it from beneath--and then hammer upwards into myself. 
-
-{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449907513/in/set-72157636792385405/player/" width="500" height="375" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Triumph.")}}
-
-The screws were mangled, but rather than getting myself to Ace and figuring out what the threads were to replace, so I ordered replacement screws direct from Bike Bandit. It's insane that this stuff is still stocked, in little individually-wrapped plastic bags with part numbers no less.
-
-{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449225635/in/set-72157636792385405/player/" width="375" height="500" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Removed from the bars and disassembled.")}}
-
-Here's everything pulled off and disassembled. You can see some of the remaining shreds of PVC tubing that the cable ran through (I replaced it with heatshrink).
-
-{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449241225/in/set-72157636792385405/player/" width="375" height="500" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "")}}
-
-
-I re-soldered the leads to the phenolic plate that backs against the kill switch. See that helping hand? It's helping. 
-
-{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449754934/in/set-72157636792385405/player/" width="500" height="204" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "")}}
-
-A dab of grease helps keep the spring-loaded bearing that keeps pressure on the grooved plate in place (I don't know any of the right terms.)
-
-{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449244235/in/set-72157636792385405/player/" width="375" height="500" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Fascinating.")}}
-
-I polished the tongued contacts that control the high and low beams on the headlight. 
-
-{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449748804/in/set-72157636792385405/player/" width="375" height="500" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "I did the heatshrink over the stove (not pictured for professionalism)")}}
-
-I also cleaned up the connectors to the starter switch (I bought new OEM parts for that, as well as 3D-printed some examples.)
-
-{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449256575/in/set-72157636792385405/player/" width="500" height="375" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "")}}
-
-And then screwed the whole beast back together. 
-
-{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449772924/in/set-72157636792385405/player/" width="500" height="381" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Don't mind the drop shadow...")}}
-
-The final cleaned and re-assembled right-hand switch (RHS) for a 1972 CB500. 
-
-## Starter Solenoid
-Online, a number of people suggest checking out your starter solenoid to make sure that it's routing current to the starter, correctly.
-
-{{ macros.render_figure('<iframe src="http://www.flickr.com/photos/samjacoby/12449415763/player/" width="500" height="391" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "CB500 starter solenoid, opened up.")}}
-
-My solenoid wasn't all that dirty and it seemed to be working correctly. I could hear the click of it firing when I hit the ignition--but I didn't know much about how it worked or whether the contacts themselves were making a good enough connection.
-
-I cleaned it up some and then ran some tests with a bench-top supply at work. Draws a fair bit of current to trigger, which makes sense. It's a beefy little unit. Of course, I also looked on Ebay where new replacement solenoids are being sold for like $8, but restoring them is more fun.  
-
-<iframe width="560" height="315" src="//www.youtube.com/embed/5i1YHoF_J6s?rel=0" frameborder="0" allowfullscreen></iframe>
-
-## Clutch
-I've started tackling the clutch in earnest. They're notorious in CB500s and Honda overhauled them in the 550. Mine has been giving me trouble on-and-off since I picked it up, but recently, it's started to grow worse. It's close to impossible to hit neutral while hot -- which is pretty standard fare -- but more troubling, the clutch hasn't been disengaging while in first, so I've got to keep the engine revved to prevent it from bogging down. One hand on the throttle, one on the brake -- not a good situation. 
-
-I started by breaking into the parts bike, just to get a sense of how the pieces fit together -- which has been useful. It's a bit nerve-wracking to begin wrenching without having any idea what's in there (though I have the manuel), so it's nice to have something to play with. Tackling the clutch has been a chore. The old gasket is just about fused to the crankcase, and it's taking a couple of soaks with various solvents and a razorblade to clean it off. Nice and shiny now, though. 
-
-I checked out the clutch plates from both machines -- neither were so amazing. I checked the steel plates for warping against a glass plate and a feeler gauge. They mostly seemed OK, actually, though according to many reports, that's unlikely. The friction plates showed a bit more wear, but they also weren't warped and basically good enough to use. More concerning was that their cork pattern was clearly not stock, nor was it any of the other well-known cork facings (square, etc.) I deglazed (I hope), the steel plates with some fine sandpaper. I also measured the springs, which looked basically fine.     
-
-{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/13806512005/player/" width="600" height="800" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Clutch basket laid bare.") }}
-
-{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/13806618593/player/" width="800" height="600" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Mystery friction plates.")}}
-
-{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/13806883674/player/" width="600" height="800" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Measuring over here.")}}
-
-{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/13806544755/player/" width="800" height="600" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "In theory, these are fine.")}}
-
-I picked up some synthetic Mobile grease for no reason other than it was the most expensive, and I figured why-the-hell-not. Turned out to be red, which I don't like.  
-
-The lifter assembly and bearing went in pretty smoothly. I found a new pushrod on Ebay -- technically belongs to a CB450, but it seems to fit in there pretty nicely (same 8mm diameter), and it's i good shape. Getting an OEM clutch cable was a good idea too. A clutch cable was one of the first things that I bought when I got the bike. Now, the better part of a year later, I know that it's some non-OEM junk that's not even close to the right length.
-
-{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/15414325736/player/" width="800" height="600" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Beneath the clutch basket.") }}
-
-{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/15250835787/player/" width="800" height="600" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Replacement lifter (from a CB450)") }}
-
-{{ macros.render_figure('<iframe src="https://www.flickr.com/photos/samjacoby/15434191861/player/" width="800" height="600" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>', "Left to right: crap, old OEM, and new OEM") }}
-
-The whole thing came back together well enough, and though I wouldn't exactly call my clutch smooth-shifting (the plates probably do need to be replaced), but it's working well enough for now. 
+## Components
+Front Tire: Bridgestone Spitfire S11, 100/90 *(Fall 2013)*
+Rear Tire: Bridgestone Spitfire S11, 110/90 *(Fall 2013)*
 
 {# 
 ## Replacing Fork Seals
@@ -157,4 +85,3 @@ May 2014 | Motor | Valves reground, new seats cut (MAS Machine, Iowa City
 - [New England Honda Guys](http://nehondaguys.info/)
 
 [^zen-1]: Never read it. Hear it's not really about motorcycles. Update 05/27/2015. Read it. Is kind've about motorcycles.
-[^soul]: See *Easy Rider*. 
