--- a/site/content/me/index.html
+++ b/site/content/me/index.html
@@ -2,11 +2,9 @@
 title: Hello. 
 title_ending: " | Me"
 ---
-I'm a printer, programmer, and swampologist (temporarily) in Iowa City, Iowa. 
+I'm a printer, programmer, and swampologist in Brooklyn, NY. I work at They New York Times. 
 
-I work at [Formlabs](http://formlabs.com). 
-
-In 2013, I graduated from the [High-Low Tech](http://hlt.media.mit.edu) Research Group at the [MIT Media Lab](http://media.mit.edu), where I worked with paper and conductive inks. 
+In 2013, I graduated from the [High-Low Tech](http://hlt.media.mit.edu) Research Group at the [MIT Media Lab](http://media.mit.edu), where I worked with paper and conductive inks. I worked for [Formlabs](http://formlabs.com).  
 
 I graduated from Harvard in 2009, where I studied computer science and history. 
 
