--- a/site/content/me/index.html
+++ b/site/content/me/index.html
@@ -2,7 +2,7 @@
 title: Hello. 
 title_ending: " | Me"
 ---
-I'm a printer, programmer, and swampologist in Brooklyn, NY. I work at They New York Times. 
+I'm a printer, programmer, and swampologist in Brooklyn, NY. I work at The New York Times. 
 
 In 2013, I graduated from the [High-Low Tech](http://hlt.media.mit.edu) Research Group at the [MIT Media Lab](http://media.mit.edu), where I worked with paper and conductive inks. I worked for [Formlabs](http://formlabs.com).  
 
