should be committed...

--- a/site/content/projects/motorcycles/index.html
+++ b/site/content/projects/motorcycles/index.html
@@ -9,25 +9,43 @@ track: True
 :  Fall ride outside of Boston.  
 
 {% mark excerpt %}
-Obeying a widely-known primordial need within the soul, I was compelled to acquire a 1972 Honda motorcycle in the summer of 2013. It's a 41 year-old machine and requires continuous attention. That is part of the fun. This is mostly a place for me to keep track of notes. 
+Obeying a widely-known primordial need within the soul, I acquired a 1972 Honda motorcycle in the summer of 2013. It was (then) a 41 year-old machine and requires continuous attention. That is part of the fun. This is mostly a place for me to keep track of notes. 
 {% endmark %}
 
-I've found great satisfaction in working on it: tracing down corroded electrical connections, adjusting the timing,  changing the tires. I lean back, hands dabbed with oil and inhale the petroleum's intoxicating bouquet... Why, I just might write [a book](http://en.wikipedia.org/wiki/Zen_and_the_Art_of_Motorcycle_Maintenance) about it.[^zen-1]
+I've found great satisfaction in working on it: tracing down corroded electrical connections, adjusting the timing & valves, rebuilding the cylinders—a nice change of pace from the technological-computer arts where I usually find myself. 
 
 ## Projects
 
 - [Right-Hand Switch Rebuild](right-hand-switch)
 - [Starter Solenoid Rebuild](starter-solenoid)
+- [Top-End Rebuild](top-end-rebuild)
 - [Clutch Cleanup ](clutch)
+- [1979 Honda CB750F Super Sport](super-sport)
 
 ## Maintenance Table
 I've been working my way down this, little by little. It's pretty handy. 
 
 {{ macros.render_figure('<a href="http://www.flickr.com/photos/samjacoby/10817763986/" title="HSM500550_9 by s_jacoby, on Flickr"><img src="http://farm8.staticflickr.com/7405/10817763986_cd48417a9f.jpg" width="368" height="500" alt="HSM500550_9"></a>', "From when charts were king.") }}
 
-## Components
-Front Tire: Bridgestone Spitfire S11, 100/90 *(Fall 2013)*
-Rear Tire: Bridgestone Spitfire S11, 110/90 *(Fall 2013)*
+## Parts
+
+- Front Tire: Bridgestone Spitfire S11, 100/90 *(Fall 2013)*
+- Rear Tire: Bridgestone Spitfire S11, 110/90 *(Fall 2013)*
+- Carbs: 627B Keihin (#100 mains, #40 pilots — OEM replacements).  
+- Aftermarket 4-into-1, ceramic-coated black (Evid Mad Headers, NYS)
+- Points: New TEC OEM points (replacing Diachi)
+- APE HD Cylinder Studs
+- OEM Honda Head Gasket
+- Vesrah Gasket Kit
+- Stainless hex hardware throughout
+
+
+# Compression Check
+cyl 1: 120
+cyl 2: 120
+cyl 3: 130
+cyl 4: 130
+
 
 {# 
 ## Replacing Fork Seals
@@ -71,11 +89,20 @@ August 2014 | Oil Filter | Replaced
 August 2014 | Oil Pump |  Replace oil pump seals
 September 2014 | Oil Switch | Replaced leaking oil pressure switch 
 September 2014 | Front Caliper | Replace piston seal 
-January 2014 | Motor | Removed. Whew! 
-February 2014 | Motor | Disassembled Head 
-April 2014 | Motor | Removed cylinder studs (ouch) 
-April 2014 | Tank | Sealed w/ Eastman 2K Clearcoat 
-May 2014 | Motor | Valves reground, new seats cut (MAS Machine, Iowa City 
+January 2015 | Motor | Removed. Whew! 
+February 2015 | Motor | Disassembled Head 
+April 2015 | Motor | Removed cylinder studs (ouch) 
+April 2015 | Tank | Sealed w/ Eastman 2K Clearcoat 
+May 2015 | Motor | Valves reground, new seats cut (MAS Machine, Iowa City 
+May 2015 | Motor | Painted & reassembled top-end w/ new Versah gaskets 
+February 2016 | Chassis | Tapered steering bearings (previous owner installed) 
+February 2016 | Baggage | Machined new  
+March 2016 | Fuel System | Broke down carburetors & cleaned; replaced all rubbers; cleaned OEM brass 
+April 2016 | Shocks | Replaced stock shocks w/ new HAGONs (200lb load) 
+April 2016 | Fairing | Installed Vetter Windjammer  
+April 2016 | Electric | Replaced dash lights with LEDs 
+May 2016 | Fuel System | Pipes ceramic coated (Evil Mad Headers, New York) 
+June 2016 | Fuel System | Rejetting 627B carbs w/ Keihin #40 pilots 
 
 
 ## Resources
