--- a/site/content/me/index.html
+++ b/site/content/me/index.html
@@ -2,13 +2,13 @@
 title: Hello. 
 title_ending: " | Me"
 ---
-I'm a printer, programmer, and swampologist in Brooklyn, NY. I work at The New York Times. 
+I'm a printer and programmer in New York City. I work at The New York Times. 
 
 In 2013, I graduated from the [High-Low Tech](http://hlt.media.mit.edu) Research Group at the [MIT Media Lab](http://media.mit.edu), where I worked with paper and conductive inks. I worked for [Formlabs](http://formlabs.com).  
 
 I graduated from Harvard in 2009, where I studied computer science and history. 
 
-You can find me on [github][0], [flickr][2], & [twitter][1].  
+You can find me on [github][0] & [twitter][1].  
 
 Here's my [resume]({{ media_url('files/resume.pdf')}}), and a site where I very infrequently [sell my books][3]. 
 
